--- a/login.html
+++ b/login.html
@@ -11,7 +11,7 @@
 </head>
 <header>
 	<h1>
-		<img src="https://drive.google.com/uc?id=1kubUn8sUJdVnnyfv0EHhQtk2H6JxmWCT" alt="Cherlie">
+		<img src="https://drive.google.com/uc?id=1kubUn8sUJdVnnyfv0EHhQtk2H6JxmWCT" alt="Cherlie" class="logo-img">
 	</h1>
 </header>
 <body>
