--- a/login.html
+++ b/login.html
@@ -10,9 +10,7 @@
 	<link rel="stylesheet" href="https://cherliett.github.io/LIFF/css/login.css">
 </head>
 <header>
-	<h1>
-		<img src="https://drive.google.com/uc?id=1PHVXrKRfxZY-V4g5zofoadydQcI8kXG0" alt="Cherlie" class="logo-img">
-	</h1>
+	<h1>Charlie</h1>
 </header>
 <body>
 	<form class="w-75 mx-auto">
