--- a/login.html
+++ b/login.html
@@ -10,7 +10,7 @@
 	<link rel="stylesheet" href="https://cherliett.github.io/LIFF/css/login.css">
 </head>
 <header>
-	<h1 class="logo">Charlie</h1>
+	<p class="logo">Charlie</p>
 </header>
 <body>
 	<form class="w-75 mx-auto">
