--- a/login.html
+++ b/login.html
@@ -17,12 +17,14 @@
 	<h1>Charlie</h1>
 </header>
 <body>
+    <div class="box01">
 	<form class="w-75 mx-auto">
 		<p class="mt-3">ユーザーID</p>
 		<div>
 			<input class="formcontrol w-100 mt-1" name="userid" placeholder="" required>
 		</div>
 	</form>
+    </div>
 	
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
