--- a/login.html
+++ b/login.html
@@ -13,6 +13,8 @@
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Knewave&display=swap" rel="stylesheet">
 </head>
+<div>
+<img src="https://drive.google.com/uc?id=1UDG7Dm19saILVOOMQMXIG1ZCu1EfGlkw" alt="icon" class="face_icon">
 <header>
 	<h1>Charlie</h1>
 </header>
@@ -55,4 +57,5 @@
 		});
     </script>
 </body>
+</div>
 </html>
