--- a/login.html
+++ b/login.html
@@ -14,7 +14,7 @@
 	<link href="https://fonts.googleapis.com/css2?family=Knewave&display=swap" rel="stylesheet">
 </head>
 <div>
-<img src="https://drive.google.com/uc?id=1UDG7Dm19saILVOOMQMXIG1ZCu1EfGlkw" alt="icon" class="face_icon">
+<img src="https://cherliett.github.io/LIFF/img/face_icon.png" alt="icon" class="face_icon">
 <header>
 	<h1>Charlie</h1>
 </header>
