--- a/login.html
+++ b/login.html
@@ -27,7 +27,7 @@
 			<input class="tag02" name="userid" placeholder="" required>
 		</div>
 		<div>
-			<p class="id_err">エラー：ユーザーIDが間違っています。</p>
+			<p class="id_err">ユーザーIDが間違っています。</p>
 		</div>
 	</form>
     </div>
