--- a/login.html
+++ b/login.html
@@ -22,7 +22,7 @@
     <div class="box01">
 	<form class="w-75 mx-auto">
 		<div class="box02">
-		<p class="tag01">ユーザーID</p>
+			<p class="tag01"><b>ユーザーID</b></p>
 		<div>
 			<input class="tag02" name="userid" placeholder="" required>
 		</div>
