--- a/login.html
+++ b/login.html
@@ -27,7 +27,7 @@
 			<input class="tag02" name="userid" placeholder="" required>
 		</div>
 		<div>
-			<iframe src="https://script.google.com/macros/s/AKfycbyfvCKJ6JRKcA8d4pPvbz2ZLT1eHxcJIAUNlTlhdKVYF02tMg-Yfcedp0A7owyZPIlfQg/exec"></iframe>
+			<iframe src="https://script.google.com/macros/s/AKfycbyfvCKJ6JRKcA8d4pPvbz2ZLT1eHxcJIAUNlTlhdKVYF02tMg-Yfcedp0A7owyZPIlfQg/exec" frameborder="0"></iframe>
 		</div>
 	</form>
     </div>
