--- a/login.html
+++ b/login.html
@@ -19,7 +19,9 @@
 	<h1>Charlie</h1>
 </header>
 <body>
-    <iframe src="https://script.google.com/macros/s/AKfycbyfvCKJ6JRKcA8d4pPvbz2ZLT1eHxcJIAUNlTlhdKVYF02tMg-Yfcedp0A7owyZPIlfQg/exec" frameborder="0"></iframe>
+    <div class="main_box">
+    	<iframe src="https://script.google.com/macros/s/AKfycbyfvCKJ6JRKcA8d4pPvbz2ZLT1eHxcJIAUNlTlhdKVYF02tMg-Yfcedp0A7owyZPIlfQg/exec" frameborder="0"></iframe>
+    </div>
 </body>
 </div>
 </html>
