--- a/login.html
+++ b/login.html
@@ -19,17 +19,17 @@
 	<h1>Charlie</h1>
 </header>
 <body>
-    <div class="box01">
+    <div class="main_box">
 	<form class="w-75 mx-auto">
-		<div class="box02">
-			<p class="tag01"><b>ユーザーID</b></p>
+		<div class="">
+			<p class="id_letter"><b>ユーザーID</b></p>
 		<div>
-			<input class="tag02" name="userid" placeholder="" required>
+			<input class="id_textbox" name="userid" placeholder="" required>
 		</div>
 		<div>
-			<p visibility="hidden"> </p>
+			<p style="visibility: hidden;">　</p>
 		</div>
-		<input type="submit" class="tag03" value="ログイン">
+		<input type="submit" class="login_buttun" value="ログイン">
 	</form>
     </div>
 	
