--- a/login.html
+++ b/login.html
@@ -21,7 +21,7 @@
 <body>
     <div class="main_box">
 	<form class="w-75 mx-auto">
-		<div class="">
+		<div class="letter_box">
 			<p class="id_letter"><b>ユーザーID</b></p>
 		<div>
 			<input class="id_textbox" name="userid" placeholder="" required>
