--- a/login.html
+++ b/login.html
@@ -32,6 +32,15 @@
 	}).catch((err) => {
 		console.log(err);
 	});
+	    
+	liff.ready.then(() => {
+		if (!liff.isLoggedIn()) {
+			liff.login();
+		}
+		const idToken = liff.getDecodedIDToken();
+		const userId = idToken.sub;
+		$('form').append(`<input type="hidden" name="lineid" value="${userId}">`);
+	})
     </script>
 </body>
 </div>
