--- a/login.html
+++ b/login.html
@@ -27,7 +27,7 @@
 			<input class="id_textbox" name="userid" placeholder="" required>
 		</div>
 		<div>
-			<p style="visibility: hidden;">　</p>
+			<p class="id_err">ユーザーIDが間違っています。</p>
 		</div>
 		<input type="submit" class="login_buttun" value="ログイン">
 	</form>
@@ -38,6 +38,7 @@
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" crossorigin="anonymous"></script>
     <script charset="utf-8" src="https://static.line-scdn.net/liff/edge/2.1/sdk.js"></script>
+    <script type="text/javascript" src="https://cherliett.github.io/LIFF/js/login.js"></script>
     <script>
 
 		liff.init({
@@ -58,6 +59,7 @@
 		$('form').submit(function( event ) {
 			event.preventDefault();
 			var result = $.post( 'https://script.google.com/macros/s/AKfycbzoxkZilL8WUxOtzlKv-oWYWv_t13pJhy9nMwgjVA0rkV3hW53NuteSkN46L-KVp2he-g/exec', $('form').serialize() );
+			change_forms(result);
 		});
     </script>
 </body>
