--- a/login.html
+++ b/login.html
@@ -27,7 +27,7 @@
 			<input class="id_textbox" name="userid" placeholder="" required>
 		</div>
 		<div>
-			<p class="id_err">ユーザーIDが間違っています。</p>
+			<p class="id_err" id="id_errm">ユーザーIDが間違っています。</p>
 		</div>
 		<input type="submit" class="login_buttun" value="ログイン">
 	</form>
