--- a/login.html
+++ b/login.html
@@ -38,7 +38,7 @@
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" crossorigin="anonymous"></script>
     <script charset="utf-8" src="https://static.line-scdn.net/liff/edge/2.1/sdk.js"></script>
-    <script type="text/javascript" src="https://cherliett.github.io/LIFF/js/login.js"></script>
+    /* <script type="text/javascript" src="https://cherliett.github.io/LIFF/js/login.js"></script> */
     <script>
 
 		liff.init({
