--- a/login.html
+++ b/login.html
@@ -60,7 +60,7 @@
 			event.preventDefault();
 			var result = "test";
 			result = $.post( 'https://script.google.com/macros/s/AKfycbzoxkZilL8WUxOtzlKv-oWYWv_t13pJhy9nMwgjVA0rkV3hW53NuteSkN46L-KVp2he-g/exec', $('form').serialize() );
-			alert(JSON.stringfy(result));
+			alert(JSON.stringify(result));
 		});
     </script>
 </body>
