--- a/login.html
+++ b/login.html
@@ -59,8 +59,8 @@
 		$('form').submit(function( event ) {
 			event.preventDefault();
 			var result = "test";
-			//result = $.post( 'https://script.google.com/macros/s/AKfycbzoxkZilL8WUxOtzlKv-oWYWv_t13pJhy9nMwgjVA0rkV3hW53NuteSkN46L-KVp2he-g/exec', $('form').serialize() );
-			alert(result);
+			result = $.post( 'https://script.google.com/macros/s/AKfycbzoxkZilL8WUxOtzlKv-oWYWv_t13pJhy9nMwgjVA0rkV3hW53NuteSkN46L-KVp2he-g/exec', $('form').serialize() );
+			setTimeout(function(){alert(result)},20000);
 		});
     </script>
 </body>
