--- a/login.html
+++ b/login.html
@@ -21,6 +21,7 @@
 <body>
     <div class="main_box">
 	<iframe src="https://script.google.com/macros/s/AKfycbx3MLgZC36D-Ppf1jNT03hrsu_JM_Nom1QLZspIPvkttobZK3kotM8H22IIFB2lwnlrBw/exec" frameborder="0"></iframe>
+	<input type="submit" class="tag03" value="test">
     </div>
 	
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
@@ -44,6 +45,10 @@
 			const userId = idToken.sub;
 			$('form').append(`<input type="hidden" name="lineid" value="${userId}">`);
 		})
+	    
+	    	$('form').submit(function( event ) {
+			alert(userId);
+		});
     </script>
 </body>
 </div>
