--- a/login.html
+++ b/login.html
@@ -43,12 +43,12 @@
 			}
 			const idToken = liff.getDecodedIDToken();
 			const userId = idToken.sub;
-			$('form').append(`<input type="hidden" name="lineid" value="${userId}">`);
+			$('form').append(`<input type="hidden" id="lineid" value="${userId}">`);
 		})
 	    
 	    	$('form').submit(function( event ) {
 			event.preventDefault();
-			alert(userId);
+			alert(lineid.value);
 		});
     </script>
 </body>
