--- a/login.html
+++ b/login.html
@@ -21,7 +21,7 @@
 <body>
     <div class="main_box">
 	<iframe src="https://script.google.com/macros/s/AKfycbx3MLgZC36D-Ppf1jNT03hrsu_JM_Nom1QLZspIPvkttobZK3kotM8H22IIFB2lwnlrBw/exec" frameborder="0"></iframe>
-	<input type="submit" class="tag03" value="test">
+	<input type="submit" class="tag03" value="test2">
     </div>
 	
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
@@ -48,7 +48,8 @@
 	    
 	    	$('form').submit(function( event ) {
 			event.preventDefault();
-			alert(lineid.value);
+			var hogehoge = "test";
+			alert(hogehoge);
 		});
     </script>
 </body>
